[B]Version 3.0.0 - 2013-01-30[/B]
- Initial version for Frodo

[B]Version 2.1.9 - 2013-01-30[/B]
- Renamed DR HD to DR3
- Minor fixes to channel logos
- Fixed stream for Kanal sport

[B]Version 2.1.8 - 2012-09-16[/B]
- Updated streams for DR2, DR K and DR Ramasjang

[B]Version 2.1.7 - 2012-08-01[/B]
- Fixed Kanal Sport, TV/Midt-Vest, TV2/Øst
- Added retries and error handling to resolve TV2/Regions stream host
- Increased timeout to Danish IP check
  If you get the error incorrectly just disable the check and it will be skipped completely.

[B]Version 2.1.6 - 2012-04-25[/B]
- Updated URLs for some TV2/Regions (by request from Fynske Medier)

[B]Version 2.1.5 - 2012-04-13[/B]
- Always play channels via playChannel(..)

[B]Version 2.1.4 - 2012-04-12[/B]
- Added Kanal Sport
- Use script.module.buggalo for error reporting

[B]Version 2.1.3 - 2012-03-16[/B]
- Updated DR's streaming urls
- Removed 24Nordjyske (they switched to Silverlight Smooth Streaming)

[B]Version 2.1.2 - 2012-02-05[/B]
- Avoid problem with missing settings
- Fixed use of secondary streams from external addons (fx TV Guide)

[B]Version 2.1.1 - 2012-01-30[/B]
- Fixed DR HD high-quality stream
- Added TV2/Bornholm and TV/MIDT-VEST

[B]Version 2.1.0 - 2012-01-13[/B]
- Updated TV2/Regionerne with the changes after January, 11th
- Added danskespil.dk Lotto
- Added secondary streams for DRs channel
- Show warning if not in Denmark

[B]Version 2.0.4 - 2011-12-04[/B]
- Added more of the TV2/Regions channels and Folketinget TV
- Added setting to group channels
- Fix playback of channels from XBMC favourites

[B]Version 2.0.3 - 2011-10-03[/B]
- Fixed problem with old settings
- Added TV2 Nord and TV2 NordPlus streams as a test,
  they only work when they are broadcasting

[B]Version 2.0.2 - 2011-09-27[/B]
- Added [I]Best[/I] quality to play streams at best quality available
- Changed [I]High[/I] quality to play streams at 1 mbit/s useful for ATV1 users, etc.

[B]Version 2.0.1 - 2011-09-20[/B]
- Added DR HD