@@ -1,3 +1,7 @@
+[B]Version 3.0.1 - 2013-03-22[/B]
+- Added DR Ultra
+- Removed DR Update
+
 [B]Version 3.0.0 - 2013-01-30[/B]
 - Initial version for Frodo
 
